--- a/BolaBergerak.html
+++ b/BolaBergerak.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bola Canvas</title>
+  <title>Bola Bergerak</title>
   <style>
     body {
       display: flex;
